# researchmate-agent

./: .env.example  .gitignore  DAY1_COMPLETE.md  DAY3-4_COMPLETE.md  DAY5-6_PROGRESS.md  README.md  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.local.json
examples/: basic_research.py  test_llm_client.py
src/api/: client.py
src/graph/: nodes.py  state.py  workflow.py
src/prompts/: analyzer.py  decomposer.py  synthesizer.py
src/tools/: arxiv_tool.py  citation_analyzer.py  semantic_scholar_tool.py
src/utils/: logger.py  retry.py
tests/: test_tools.py
tests/fixtures/: sample_papers.json
